# dobot-hci

./: .gitignore  LICENSE  README.md  pyproject.toml  reqs.txt  requirements.dev.txt  requirements.gpu.txt  requirements.txt  test.py
.github/workflows/: ci.yml  publish.yml
Fuzzy-Logic-Controller-Project/: forward_stop_LiDAR.py  run_gazeboo.sh  run_robot.sh
Fuzzy-Logic-Controller-Project/turtlebot3_ws/install/: _local_setup_util_ps1.py  _local_setup_util_sh.py  local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Fuzzy-Logic-Controller-Project/turtlebot3_ws/scripts/: combining.py  fuzzyFunctions.py  fuzzyLogic.py  fuzzyLogicControllerObstacle.py  fuzzyLogicControllerWall.py  gauss.py  main.py  pid_wallFollower.py  trapez.py  triangle.py
dobot_hci/: __main__.py  audio.py  camera.py  camera_feeds.py  cli.py  experiments.py  gui.py  movement.py  recorders.py  robot.py  robot_controls.py  settings.py  utils.py
dobot_hci/Fuzzy_Logic/: combining.py  fuzzyFunctions.py  fuzzyLogicController.py  gauss.py  trapez.py  triangle.py  type2.py
dobot_hci/handlers/: voice_commands.py
dobot_hci/models/: language.py  speech.py  vision.py
ml_nn_vision/savant/: __init__.py  __main__.py  datasets.py  settings.py  utils.py
ml_nn_vision/savant/networks/: cnn.py  common.py
ml_nn_vision/scripts/: rename_training_data.py
ml_nn_vision/wisdom/: __main__.py  cli.py  common.py  experiments.py  inferrers.py  recorders.py  settings.py  utils.py
our_dobot/: dobot.py  interface.py  message.py  parsers.py
sample_package/: cli.py
sample_package2/: foo.py
scripts/: deps.sh  gh_release.py  test.sh
test/: dobotMovement.py  dobotTest.py  test_foo.py
